# qt-test-without-export

./: CMakeLists.txt
app/: CMakeLists.txt
app/include/: application.h
app/src/: application.cpp  main.cpp
core/: .gitignore  CMakeLists.txt
core/include/: abstract_core.h  base_interface.h  gui_interface.h  logic_interface.h
core/src/: abstract_core.cpp
plugins/: CMakeLists.txt
plugins/gui/: CMakeLists.txt
plugins/gui/include/: gui_plugin.h  gui_plugin_export.h  i_gui_plugin.h
plugins/gui/src/: gui_plugin.cpp
plugins/logic/: CMakeLists.txt
plugins/logic/include/: i_logic_plugin.h  logic_plugin.h  logic_plugin_export.h
plugins/logic/src/: logic_plugin.cpp
plugins/tests/: CMakeLists.txt  logic_tests.h
