project(core
    LANGUAGES CXX)

AUTO_BUILD_RESOURCES_QT5()

INCLUDE_SOURCES(${PROJECT_NAME})

add_library(${PROJECT_NAME} STATIC ${HEADERS} ${SOURCES})
add_library(${PROJECT_NAMESPACE}::${PROJECT_NAME} ALIAS ${PROJECT_NAME})

GENERATE_EXPORT_HEADERS(TARGET ${PROJECT_NAME} DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)

set(QT_COMPONENTS
    Core Widgets
    QuickWidgets
    Core
    QuickControls2
    Quick
    Qml
)

target_include_directories(${PROJECT_NAME}
    PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/include
)

FIND_AND_LINK_QT(TARGET ${PROJECT_NAME}
    QT_COMPONENTS
    ${QT_COMPONENTS}
)

SET_BASE_TARGET_PROPERTIES(${PROJECT_NAME})
